// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Table
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
    ]
  }
  layout="fixed"
  renderRow={[Function]}
  rowKey={[Function]}
>
  <TableSimple
    body={
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "children": 1,
                "key": "id",
              },
              Object {
                "children": "John Doe",
                "key": "name",
              },
              Object {
                "children": <span>
                  foo
                </span>,
                "key": "content",
              },
            ],
            "data": Object {
              "content": "foo",
              "firstName": "John",
              "id": 1,
              "lastName": "Doe",
            },
            "id": 0,
            "index": 0,
          },
        ],
      }
    }
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
      ]
    }
    head={
      Object {
        "colgroup": Array [
          Object {
            "children": "ID",
            "colSpan": 1,
            "key": "id",
            "rowSpan": 1,
          },
          Object {
            "children": "Name",
            "colSpan": 1,
            "key": "name",
            "rowSpan": 1,
          },
          Object {
            "children": "Content",
            "colSpan": 1,
            "key": "content",
            "rowSpan": 1,
          },
        ],
        "columns": Object {
          "content": Object {
            "children": Array [],
            "depth": 1,
            "key": "content",
            "props": Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          "id": Object {
            "children": Array [],
            "depth": 1,
            "key": "id",
            "props": Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          "name": Object {
            "children": Array [],
            "depth": 1,
            "key": "name",
            "props": Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            "render": [Function],
          },
        },
        "order": Array [
          Object {
            "children": Array [],
            "depth": 1,
            "key": "id",
            "props": Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          Object {
            "children": Array [],
            "depth": 1,
            "key": "name",
            "props": Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            "render": [Function],
          },
          Object {
            "children": Array [],
            "depth": 1,
            "key": "content",
            "props": Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
            "render": [Function],
          },
        ],
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
            ],
            "id": 0,
          },
        ],
      }
    }
    layout="fixed"
    renderRow={[Function]}
  >
    <div
      className="wrapper"
    >
      <div
        className="scroller"
      >
        <table
          className="table fixed"
        >
          <thead
            className="thead"
          >
            <renderRow
              head={true}
              key="0"
            >
              <Row>
                <tr
                  className="row"
                >
                  <Cell
                    colSpan={1}
                    head={true}
                    key="id"
                    rowSpan={1}
                  >
                    <th
                      className="col head"
                      colSpan={1}
                      rowSpan={1}
                    >
                      ID
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="name"
                    rowSpan={1}
                  >
                    <th
                      className="col head"
                      colSpan={1}
                      rowSpan={1}
                    >
                      Name
                    </th>
                  </Cell>
                  <Cell
                    colSpan={1}
                    head={true}
                    key="content"
                    rowSpan={1}
                  >
                    <th
                      className="col head"
                      colSpan={1}
                      rowSpan={1}
                    >
                      Content
                    </th>
                  </Cell>
                </tr>
              </Row>
            </renderRow>
          </thead>
          <tbody
            className="tbody"
          >
            <renderRow
              WithSentinel={[Function]}
              data={
                Object {
                  "content": "foo",
                  "firstName": "John",
                  "id": 1,
                  "lastName": "Doe",
                }
              }
              index={0}
              key="0"
            >
              <Row>
                <tr
                  className="row"
                >
                  <Cell
                    key="id"
                  >
                    <td
                      className="col"
                    >
                      1
                    </td>
                  </Cell>
                  <Cell
                    key="name"
                  >
                    <td
                      className="col"
                    >
                      John Doe
                    </td>
                  </Cell>
                  <Cell
                    key="content"
                  >
                    <td
                      className="col"
                    >
                      <span>
                        foo
                      </span>
                    </td>
                  </Cell>
                </tr>
              </Row>
            </renderRow>
          </tbody>
        </table>
      </div>
    </div>
  </TableSimple>
</Table>
`;

exports[`should render reverse sorted rows 1`] = `
<Table
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
      Object {
        "content": "bar",
        "firstName": "Jane",
        "id": 2,
        "lastName": "Doe",
      },
      Object {
        "content": "baz",
        "firstName": "Jane",
        "id": 3,
        "lastName": "Do",
      },
    ]
  }
  layout="fixed"
  renderRow={[Function]}
  rowKey={[Function]}
  sort={
    Array [
      Object {
        "column": "firstName",
        "order": "ASC",
      },
      Object {
        "column": "content",
        "order": "DESC",
      },
    ]
  }
>
  <Sortable
    compareFn={[Function]}
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
        Object {
          "content": "bar",
          "firstName": "Jane",
          "id": 2,
          "lastName": "Doe",
        },
        Object {
          "content": "baz",
          "firstName": "Jane",
          "id": 3,
          "lastName": "Do",
        },
      ]
    }
  >
    <TableSimple
      body={
        Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": 3,
                  "key": "id",
                },
                Object {
                  "children": "Jane Do",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    baz
                  </span>,
                  "key": "content",
                },
              ],
              "data": Object {
                "content": "baz",
                "firstName": "Jane",
                "id": 3,
                "lastName": "Do",
              },
              "id": 0,
              "index": 0,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 2,
                  "key": "id",
                },
                Object {
                  "children": "Jane Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    bar
                  </span>,
                  "key": "content",
                },
              ],
              "data": Object {
                "content": "bar",
                "firstName": "Jane",
                "id": 2,
                "lastName": "Doe",
              },
              "id": 1,
              "index": 1,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 1,
                  "key": "id",
                },
                Object {
                  "children": "John Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "data": Object {
                "content": "foo",
                "firstName": "John",
                "id": 1,
                "lastName": "Doe",
              },
              "id": 2,
              "index": 2,
            },
          ],
        }
      }
      data={
        Array [
          Object {
            "content": "foo",
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
          Object {
            "content": "bar",
            "firstName": "Jane",
            "id": 2,
            "lastName": "Doe",
          },
          Object {
            "content": "baz",
            "firstName": "Jane",
            "id": 3,
            "lastName": "Do",
          },
        ]
      }
      head={
        Object {
          "colgroup": Array [
            Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
          ],
          "columns": Object {
            "content": Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "id": Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "name": Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          },
          "order": Array [
            Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          ],
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": "ID",
                  "colSpan": 1,
                  "key": "id",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Name",
                  "colSpan": 1,
                  "key": "name",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Content",
                  "colSpan": 1,
                  "key": "content",
                  "rowSpan": 1,
                },
              ],
              "id": 0,
            },
          ],
        }
      }
      layout="fixed"
      renderRow={[Function]}
    >
      <div
        className="wrapper"
      >
        <div
          className="scroller"
        >
          <table
            className="table fixed"
          >
            <thead
              className="thead"
            >
              <renderRow
                head={true}
                key="0"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      colSpan={1}
                      head={true}
                      key="id"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        ID
                      </th>
                    </Cell>
                    <Cell
                      colSpan={1}
                      head={true}
                      key="name"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        Name
                      </th>
                    </Cell>
                    <Cell
                      colSpan={1}
                      head={true}
                      key="content"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        Content
                      </th>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
            </thead>
            <tbody
              className="tbody"
            >
              <renderRow
                WithSentinel={[Function]}
                data={
                  Object {
                    "content": "baz",
                    "firstName": "Jane",
                    "id": 3,
                    "lastName": "Do",
                  }
                }
                index={0}
                key="0"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      key="id"
                    >
                      <td
                        className="col"
                      >
                        3
                      </td>
                    </Cell>
                    <Cell
                      key="name"
                    >
                      <td
                        className="col"
                      >
                        Jane Do
                      </td>
                    </Cell>
                    <Cell
                      key="content"
                    >
                      <td
                        className="col"
                      >
                        <span>
                          baz
                        </span>
                      </td>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
              <renderRow
                WithSentinel={[Function]}
                data={
                  Object {
                    "content": "bar",
                    "firstName": "Jane",
                    "id": 2,
                    "lastName": "Doe",
                  }
                }
                index={1}
                key="1"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      key="id"
                    >
                      <td
                        className="col"
                      >
                        2
                      </td>
                    </Cell>
                    <Cell
                      key="name"
                    >
                      <td
                        className="col"
                      >
                        Jane Doe
                      </td>
                    </Cell>
                    <Cell
                      key="content"
                    >
                      <td
                        className="col"
                      >
                        <span>
                          bar
                        </span>
                      </td>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
              <renderRow
                WithSentinel={[Function]}
                data={
                  Object {
                    "content": "foo",
                    "firstName": "John",
                    "id": 1,
                    "lastName": "Doe",
                  }
                }
                index={2}
                key="2"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      key="id"
                    >
                      <td
                        className="col"
                      >
                        1
                      </td>
                    </Cell>
                    <Cell
                      key="name"
                    >
                      <td
                        className="col"
                      >
                        John Doe
                      </td>
                    </Cell>
                    <Cell
                      key="content"
                    >
                      <td
                        className="col"
                      >
                        <span>
                          foo
                        </span>
                      </td>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
            </tbody>
          </table>
        </div>
      </div>
    </TableSimple>
  </Sortable>
</Table>
`;

exports[`should render sorted rows 1`] = `
<Table
  data={
    Array [
      Object {
        "content": "foo",
        "firstName": "John",
        "id": 1,
        "lastName": "Doe",
      },
      Object {
        "content": "foo",
        "firstName": "Jane",
        "id": 2,
        "lastName": "Doe",
      },
    ]
  }
  layout="fixed"
  renderRow={[Function]}
  rowKey={[Function]}
  sort={
    Array [
      "content",
    ]
  }
>
  <Sortable
    compareFn={[Function]}
    data={
      Array [
        Object {
          "content": "foo",
          "firstName": "John",
          "id": 1,
          "lastName": "Doe",
        },
        Object {
          "content": "foo",
          "firstName": "Jane",
          "id": 2,
          "lastName": "Doe",
        },
      ]
    }
  >
    <TableSimple
      body={
        Object {
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": 1,
                  "key": "id",
                },
                Object {
                  "children": "John Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "data": Object {
                "content": "foo",
                "firstName": "John",
                "id": 1,
                "lastName": "Doe",
              },
              "id": 0,
              "index": 0,
            },
            Object {
              "columns": Array [
                Object {
                  "children": 2,
                  "key": "id",
                },
                Object {
                  "children": "Jane Doe",
                  "key": "name",
                },
                Object {
                  "children": <span>
                    foo
                  </span>,
                  "key": "content",
                },
              ],
              "data": Object {
                "content": "foo",
                "firstName": "Jane",
                "id": 2,
                "lastName": "Doe",
              },
              "id": 1,
              "index": 1,
            },
          ],
        }
      }
      data={
        Array [
          Object {
            "content": "foo",
            "firstName": "John",
            "id": 1,
            "lastName": "Doe",
          },
          Object {
            "content": "foo",
            "firstName": "Jane",
            "id": 2,
            "lastName": "Doe",
          },
        ]
      }
      head={
        Object {
          "colgroup": Array [
            Object {
              "children": "ID",
              "colSpan": 1,
              "key": "id",
              "rowSpan": 1,
            },
            Object {
              "children": "Name",
              "colSpan": 1,
              "key": "name",
              "rowSpan": 1,
            },
            Object {
              "children": "Content",
              "colSpan": 1,
              "key": "content",
              "rowSpan": 1,
            },
          ],
          "columns": Object {
            "content": Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "id": Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            "name": Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          },
          "order": Array [
            Object {
              "children": Array [],
              "depth": 1,
              "key": "id",
              "props": Object {
                "children": "ID",
                "colSpan": 1,
                "key": "id",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "name",
              "props": Object {
                "children": "Name",
                "colSpan": 1,
                "key": "name",
                "rowSpan": 1,
              },
              "render": [Function],
            },
            Object {
              "children": Array [],
              "depth": 1,
              "key": "content",
              "props": Object {
                "children": "Content",
                "colSpan": 1,
                "key": "content",
                "rowSpan": 1,
              },
              "render": [Function],
            },
          ],
          "rows": Array [
            Object {
              "columns": Array [
                Object {
                  "children": "ID",
                  "colSpan": 1,
                  "key": "id",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Name",
                  "colSpan": 1,
                  "key": "name",
                  "rowSpan": 1,
                },
                Object {
                  "children": "Content",
                  "colSpan": 1,
                  "key": "content",
                  "rowSpan": 1,
                },
              ],
              "id": 0,
            },
          ],
        }
      }
      layout="fixed"
      renderRow={[Function]}
    >
      <div
        className="wrapper"
      >
        <div
          className="scroller"
        >
          <table
            className="table fixed"
          >
            <thead
              className="thead"
            >
              <renderRow
                head={true}
                key="0"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      colSpan={1}
                      head={true}
                      key="id"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        ID
                      </th>
                    </Cell>
                    <Cell
                      colSpan={1}
                      head={true}
                      key="name"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        Name
                      </th>
                    </Cell>
                    <Cell
                      colSpan={1}
                      head={true}
                      key="content"
                      rowSpan={1}
                    >
                      <th
                        className="col head"
                        colSpan={1}
                        rowSpan={1}
                      >
                        Content
                      </th>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
            </thead>
            <tbody
              className="tbody"
            >
              <renderRow
                WithSentinel={[Function]}
                data={
                  Object {
                    "content": "foo",
                    "firstName": "John",
                    "id": 1,
                    "lastName": "Doe",
                  }
                }
                index={0}
                key="0"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      key="id"
                    >
                      <td
                        className="col"
                      >
                        1
                      </td>
                    </Cell>
                    <Cell
                      key="name"
                    >
                      <td
                        className="col"
                      >
                        John Doe
                      </td>
                    </Cell>
                    <Cell
                      key="content"
                    >
                      <td
                        className="col"
                      >
                        <span>
                          foo
                        </span>
                      </td>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
              <renderRow
                WithSentinel={[Function]}
                data={
                  Object {
                    "content": "foo",
                    "firstName": "Jane",
                    "id": 2,
                    "lastName": "Doe",
                  }
                }
                index={1}
                key="1"
              >
                <Row>
                  <tr
                    className="row"
                  >
                    <Cell
                      key="id"
                    >
                      <td
                        className="col"
                      >
                        2
                      </td>
                    </Cell>
                    <Cell
                      key="name"
                    >
                      <td
                        className="col"
                      >
                        Jane Doe
                      </td>
                    </Cell>
                    <Cell
                      key="content"
                    >
                      <td
                        className="col"
                      >
                        <span>
                          foo
                        </span>
                      </td>
                    </Cell>
                  </tr>
                </Row>
              </renderRow>
            </tbody>
          </table>
        </div>
      </div>
    </TableSimple>
  </Sortable>
</Table>
`;
